[gd_scene load_steps=6 format=3 uid="uid://5op7emasoov4"]

[ext_resource type="Texture2D" uid="uid://brcyax1pnel5y" path="res://assets/backgrounds/Spritesheets/ChatGPT Image 18 gen 2026, 13_53_45 (1).png" id="1_e8jcs"]
[ext_resource type="Script" uid="uid://dxv56uhpp51ey" path="res://scripts/BloodDrawMiniGame.gd" id="1_heeqe"]
[ext_resource type="Texture2D" uid="uid://n1ajp3q30qje" path="res://assets/backgrounds/Spritesheets/ChatGPT Image 18 gen 2026, 14_13_05.png" id="2_heeqe"]
[ext_resource type="Theme" uid="uid://rlxur78jvedg" path="res://PixelTheme.tres" id="2_nuyn8"]
[ext_resource type="FontFile" uid="uid://dsn4jt3hfsxhr" path="res://fonts/PixelOperator8.ttf" id="3_ij6qp"]

[node name="BloodDrawMiniGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_heeqe")

[node name="Frame" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="Frame"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBox" type="VBoxContainer" parent="Frame/Margin"]
custom_minimum_size = Vector2(520, 360)
layout_mode = 2
theme = ExtResource("2_nuyn8")

[node name="Title" type="Label" parent="Frame/Margin/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ij6qp")

[node name="Hint" type="Label" parent="Frame/Margin/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ij6qp")

[node name="PlayField" type="Control" parent="Frame/Margin/VBox"]
custom_minimum_size = Vector2(520, 360)
layout_mode = 2
mouse_filter = 2

[node name="Arm" type="TextureRect" parent="Frame/Margin/VBox/PlayField"]
texture_filter = 1
layout_mode = 1
offset_right = 460.0
offset_bottom = 542.0
texture = ExtResource("1_e8jcs")
expand_mode = 1
stretch_mode = 4

[node name="ElbowMarker" type="Marker2D" parent="Frame/Margin/VBox/PlayField/Arm"]
position = Vector2(156, 356)

[node name="VeinZone" type="ColorRect" parent="Frame/Margin/VBox/PlayField"]
z_index = 5
custom_minimum_size = Vector2(67, 27)
layout_mode = 0
offset_left = 129.0
offset_top = 339.0
offset_right = 196.0
offset_bottom = 375.0
color = Color(6.01634e-07, 0.710683, 0, 1)

[node name="Needle" type="TextureRect" parent="Frame/Margin/VBox/PlayField"]
z_index = 10
texture_filter = 1
layout_mode = 1
offset_right = 181.0
offset_bottom = 231.0
rotation = -3.14159
texture = ExtResource("2_heeqe")
expand_mode = 1
stretch_mode = 4
